moduleに書き換え

--- a/Game01Zoo/javascript-raf.html
+++ b/Game01Zoo/javascript-raf.html
@@ -10,17 +10,13 @@
     <meta name="author" content="Name; e-mail: name@mail.domain">
     <meta name="copyright" content="Copyright (c) Name All Rights Reserved.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0 viewport-fit=cover">
-    <script src="./js/javascript-raf.js"></script>
+    <script src="./js/javascript-raf.js" type="module"></script>
     <title>javascript-raf</title>
 </head>
 
 <body>
     <canvas id="js-screen" style="border: solid 1px #000"></canvas>
     <div>画像提供元：<a href="http://icooon-mono.com/">icooon mono</a></div>
-    <script>
-        // ES2015
-        window.onload = () => boot("js-screen");
-    </script>
 </body>
 
 </html>
